[gd_scene load_steps=2]

[ext_resource path="res://scripts/ui/InfoBox.gd" type="Script" id="1"]

[node name="InfoBox" type="Panel" script=ExtResource("1")]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="NameLabel" type="Label" parent="VBoxContainer"]
text = ""

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
text = ""

[node name="CostLabel" type="Label" parent="VBoxContainer"]
text = ""
